syntax = "proto3";
package beneficiary;

service BeneficiaryAPI {
    rpc VerifyServerShare (VerifyServerShareRequest)
        returns           (VerifyServerShareResponse);
    rpc GetChallenge (GetChallengeRequest)
        returns      (Challenge);
    rpc ObtainServerSecretShare (ObtainServerSecretShareRequest)
        returns                 (ObtainServerSecretShareResponse);
}
// VerifyServerShare
message VerifyServerShareRequest {
    bytes PublicKey = 1;
    bytes ClientPublicShare = 2;
}
message VerifyServerShareResponse {
    bytes ServerPublicShare = 1;
}

// GetChallenge
message GetChallengeRequest {}

message Challenge {
    bytes Id = 1;
    bytes Challenge = 2;
}

// ObtainServerSecretShare
message ObtainServerSecretShareRequest {
    bytes PublicKey = 1;
    bytes ClientPublicShare = 2;
    Challenge SolvedChallenge = 3;
    bytes Solution = 4;
}
message ObtainServerSecretShareResponse {
    bytes ServerSecretShare = 1;
}
